# C-_First_Game

./: .gitignore  CMakeLists.txt  README.md
include/: Game.h  Player.h
src/: Game.cpp  Player.cpp  main.cpp
